Fixed layout issues

--- a/src/scss/styles/_assets.scss
+++ b/src/scss/styles/_assets.scss
@@ -12,7 +12,6 @@
 }
 .button-secondary {
   background: $lightest-grey;
-  border-color: transparent;
   color: $darkest-grey;
 }
 .heading {
