--- a/src/scss/styles/_header.scss
+++ b/src/scss/styles/_header.scss
@@ -8,8 +8,10 @@
   height: 80px;
   display: block;
   background: url(../img/nelusoana.svg) 50% 50% no-repeat;
-  float: left;
   transition: all .2s;
+  @include breakpoint(m) {
+    float: left;
+  }
   &:hover { opacity: .8; }
 }
 // Menu
@@ -18,12 +20,15 @@
   @include line-height(18);
   text-transform: uppercase;
   list-style: none;
-  padding: 33px 0 0 0;
   margin: 0;
-  float: right;
+  padding: 0 0 20px 0;
+  @include breakpoint(m) {
+    padding: 35px 0 0 0;
+    float: right;
+  }
   & > li {
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 20px 0 0;
     & > a {
       color: $light-grey;
       text-decoration: none;
